# stock-manager

./: .prettierignore  LICENSE  README.md  eslint.config.js  index.html  mock-test.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
seeds/: README.md  generate-seed.mjs  seed.sql
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json  updater.key  updater.key.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_pos_schema.sql  003_inventory_refactor.sql  004_payment_center.sql  005_cash_session_notes.sql  006_purchasing.sql  007_studio_billing.sql  008_expenses.sql  009_cogs.sql
src-tauri/src/: lib.rs
src-tauri/webview2-runtime/: README.md
src/components/: language-provider.tsx  layout.tsx  theme-provider.tsx
src/components/expenses/: attachments-field.tsx  categories-dialog.tsx  date-ranges.ts  expense-analytics.tsx  expense-dashboard.tsx  expense-form-dialog.tsx  expense-list.tsx  methods-dialog.tsx  recurring-dialog.tsx
src/components/inventory/: adjust-stock-dialog.tsx  barcode-preview.tsx  category-create-dialog.tsx  entity-combobox.tsx  image-uploader.tsx  product-activity-timeline.tsx  product-detail-sheet.tsx  product-form-dialog.tsx  product-form.tsx  supplier-create-dialog.tsx  variant-editor.tsx  variant-matrix-dialog.tsx
src/components/inventory/label-designer/: articles-tab.tsx  design-canvas.tsx  design-tab.tsx  label-designer-dialog.tsx  label-element-view.tsx  saves-tab.tsx
src/components/mvpblocks/: index.tsx  login-form1.tsx
src/components/payments/: cart-panel.tsx  cash-history-dialog.tsx  cash-register-sheet.tsx  customer-account-dialog.tsx  customer-form.tsx  customer-payments-tab.tsx  customer-sheet.tsx  denomination-counter.tsx  history-sheet.tsx  insights-strip.tsx  manager-gate.tsx  payment-panel.tsx  pos-hotkeys.tsx  product-browser.tsx  quick-actions-bar.tsx  shortcuts-dialog.tsx  variant-picker.tsx
src/components/pos/: variant-search.tsx
src/components/purchasing/: purchase-export.ts  purchase-payment-dialog.tsx  purchase-product-grid.tsx  purchases-dialog.tsx  status.ts  summary-cards.tsx  supplier-form.tsx  supplier-orders-tab.tsx  supplier-payments-tab.tsx  suppliers-dialog.tsx
src/components/sell/: discount-popover.tsx  payment-dialog.tsx
src/components/settings/: data-settings-card.tsx  hardware-settings-card.tsx  lookups-card.tsx  promotions-card.tsx  security-card.tsx  shop-settings-card.tsx
src/components/studio/: preview.tsx  settings-panel.tsx  source-list.tsx  use-studio-document.ts
src/components/ui/: accordion.tsx  admin-sidebar.tsx  alert-dialog.tsx  badge.tsx  button.tsx  calendar.tsx  carousel.tsx  combobox.tsx  context-menu.tsx  dashboard-card.tsx  dashboard-header.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  menubar.tsx  native-select.tsx  navigation-menu.tsx  quick-actions.tsx  recent-activity.tsx  revenue-chart.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  sonner.tsx  system-status.tsx  table.tsx  users-table.tsx
src/lib/: bindings.ts  date-ranges.ts  db.ts  expense-attachments.ts  export.ts  i18n.ts  images.ts  money.ts  num-to-words.ts
src/lib/pos/: activity.ts  auth.ts  barcode.ts  bulk.ts  cash.ts  catalog-io.ts  catalog.ts  customer-payments.ts  customers.ts  db.ts  escpos.ts  expense-export.ts  expenses.ts  hardware.ts  held.ts  inventory.ts  invoice-pdf.ts  label-render.ts  label-template.ts  labels.ts  payment-methods.ts  product-form.ts  promotions.ts  purchases.ts  queries.ts  receipt.ts  reports.ts  returns.ts  sales.ts  settings.ts  shop.ts  supplier-payments.ts  suppliers.ts  types.ts  use-scanner.ts
src/lib/pos/studio/: data.ts  document-html.ts  document-model.ts  studio-pdf.ts  types.ts
src/locales/: ar.json  en.json  fr.json
src/pages/: best-sellers.tsx  bulk-import.tsx  cash.tsx  expenses.tsx  home.tsx  inventory-intelligence.tsx  inventory.tsx  payments.tsx  product-edit.tsx  purchasing.tsx  reports.tsx  returns.tsx  sell.tsx  settings.tsx  studio.tsx
src/store/: use-app-store.ts  use-cart-store.ts  use-label-designer-store.ts  use-pos-ui-store.ts
src/types/: react-i18next.d.ts
