[package]
name = "Stock_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# Kept in sync with rust-toolchain.toml. 1.77 is the last Rust whose standard
# windows-msvc target still runs on Windows 7 (see rust-toolchain.toml).
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stock_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri v1 — the last Tauri line that supports Windows 7 SP1. v2 requires
# Windows 10 (1803+). The allowlist features below replace the standalone v2
# plugins (dialog/fs/os/process/shell/updater are core in v1).
tauri = { version = "1", features = [
    "protocol-asset",
    "dialog-save",
    "dialog-open",
    "dialog-confirm",
    "fs-all",
    "os-all",
    "process-relaunch",
    "process-exit",
    "shell-open",
    "updater",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# v1 plugins (git `v1` branch — these were not all published to crates.io for v1).
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "sqlite",
] }

# Used only to swap tauri-plugin-sql's default connection pool for a
# single-connection one (see `db_use_single_connection`). Version/features MUST
# match what the v1 tauri-plugin-sql pulls in so the `Pool<Sqlite>` types unify
# and only one `libsqlite3-sys` (a `links = "sqlite3"` crate) is in the tree.
# The plugins-workspace `v1` branch of tauri-plugin-sql depends on `sqlx = "^0.8"`.
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# --- Windows 7 / Rust 1.77 transitive-dependency pins ---
# Newer releases of these crates switched to the Rust 2024 edition (the
# `edition2024` cargo feature), which needs Rust 1.85+ and therefore won't build
# on our pinned 1.77 toolchain. They are pulled in transitively; pin each to its
# last edition-2021 release. Revisit only if the Rust pin is ever raised.
#
# `idna_adapter` >= 1.2 drags in ICU4X 2.0 (litemap 0.8, zerovec 0.11, zerofrom,
# yoke, icu_* …, all edition2024) via url -> idna; 1.1.x keeps ICU4X 1.5.
idna_adapter = "=1.1.0"
# `base64ct` >= 1.7 requires edition2024; pulled via the rsa/pkcs stack.
base64ct = "=1.6.0"
# `indexmap` >= 2.14 requires edition2024; pin to the last edition-2021 line
# (also keeps its `hashbrown` dep on the edition-2021 0.15 line).
indexmap = "=2.7.1"
# `time` >= ~0.3.53 requires edition2024; pin to the last edition-2021 release.
time = "=0.3.36"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# Enabled by `tauri build` (and when the frontend is served from the bundle).
# DO NOT REMOVE — production builds fail without it.
custom-protocol = ["tauri/custom-protocol"]
