[package]
name = "Stock_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stock_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri v1 — the last Tauri line that supports Windows 7 SP1. v2 requires
# Windows 10 (1803+). The allowlist features below replace the standalone v2
# plugins (dialog/fs/os/process/shell/updater are core in v1).
tauri = { version = "1", features = [
    "protocol-asset",
    "dialog-save",
    "dialog-open",
    "dialog-confirm",
    "fs-all",
    "os-all",
    "process-relaunch",
    "process-exit",
    "shell-open",
    "updater",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# v1 plugins (git `v1` branch — these were not all published to crates.io for v1).
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "sqlite",
] }

# Used only to swap tauri-plugin-sql's default connection pool for a
# single-connection one (see `db_use_single_connection`). Version/features MUST
# match what the v1 tauri-plugin-sql pulls in so the `Pool<Sqlite>` types unify
# and only one `libsqlite3-sys` (a `links = "sqlite3"` crate) is in the tree.
# The plugins-workspace `v1` branch of tauri-plugin-sql depends on `sqlx = "^0.8"`.
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Force indexmap 1.x's `std` feature on (feature-unifies onto the indexmap 1.9.3
# instance that kuchikiki — via wry/tao — depends on). kuchikiki writes
# `IndexMap<K, V>`, relying on the default hasher `S = RandomState`, which
# indexmap 1.9 only defines under `#[cfg(has_std)]`. Its build.rs emits `has_std`
# directly when the `std` FEATURE is set, but otherwise autocfg-probes the
# sysroot for `std` — which FAILS under `-Z build-std`, since the Tier-3 Win7
# target has no prebuilt std to probe. Enabling the feature skips that probe.
indexmap = { version = "1", features = ["std"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# Enabled by `tauri build` (and when the frontend is served from the bundle).
# DO NOT REMOVE — production builds fail without it.
custom-protocol = ["tauri/custom-protocol"]
